apps/zimbra/03.zimbra-server-deployment.yml
# deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: zimbra
  name: zimbra
  namespace: zimbra
spec:
  replicas: 1
  selector:
    matchLabels:
      app: zimbra
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: zimbra
  #    annotations:
 #       container.apparmor.security.beta.kubernetes.io/zimbra: unconfined
#        container.seccomp.security.alpha.kubernetes.io/zimbra: unconfined
    spec:
      restartPolicy: Always
      terminationGracePeriodSeconds: 180
      containers:
      - name: zimbra
        image: griffinplus/zimbra
        imagePullPolicy: Always
        volumeMounts:
        - name: zimbra
          mountPath: /data
    #    - name: mail-tls-secret
    #      mountPath: /data/app/tls
    #      readOnly: true
    #    securityContext:
     #     capabilities:
      #      add:
       #     - NET_ADMIN
        #    - SYS_ADMIN
         #   - SYS_PTRACE
      volumes:
      - name: zimbra
        hostPath:
          path: "/media/sda1/zimbra"
    #  - name: mail-tls-secret
    #    secret:
    #      secretName: mail-tls-secret
