apps/zimbra/05-zimbra-service-private.yml
apiVersion: v1
kind: Service
metadata:
  name: zimbra-cluster
  namespace: zimbra
spec:
  selector:
    app: zimbra
  type: ClusterIP
  ports:
  - name: smtp
    port: 25
    protocol: TCP
  - name: http
    port: 80
    protocol: TCP
  - name: pop3
    port: 110
    protocol: TCP
  - name: imap
    port: 143
    protocol: TCP
  - name: https
    port: 443
    protocol: TCP
  - name: smtps
    port: 465
    protocol: TCP
  - name: submission
    port: 587
    protocol: TCP
  - name: imaps
    port: 993
    protocol: TCP
  - name: pop3s
    port: 995
    protocol: TCP
  - name: xmpp
    port: 5222
    protocol: TCP
  - name: xmpp-legacy
    port: 5223
    protocol: TCP
